# scale-library-wrappers

./: .gitmodules  CMakeLists.txt  COPYRIGHT  README.md
redscale_wrappers/: CMakeLists.txt  LICENSE  common.cmake
redscale_wrappers/BLAS/: CMakeLists.txt  README.md
redscale_wrappers/BLAS/include/: blas_auxiliary.h  blas_functions.h  blas_types.h  cublas.h  cublas_v2.h
redscale_wrappers/BLAS/include/blas_impl/: blas_auxiliary.h  blas_functions.h  blas_types.h  extension.h  get_set_fns.h  legacy.h  level1.h  level2.h  level3.h  shared.hpp
redscale_wrappers/BLAS/src/: auxiliary.cpp  extension.cpp  legacy.cpp  level1.cpp  level2.cpp  level3.cpp
redscale_wrappers/DNN/: CMakeLists.txt
redscale_wrappers/DNN/include/: cudnn.h  cudnn_version.h
redscale_wrappers/FFT/: CMakeLists.txt
redscale_wrappers/FFT/include/: auxillary.h  cufft.h  functions.h  types.h
redscale_wrappers/FFT/src/: functions.cpp
redscale_wrappers/PP/: CMakeLists.txt
redscale_wrappers/RAND/: CMakeLists.txt
redscale_wrappers/RAND/include/: curand.h  curand_kernel.h  rand_types.h
redscale_wrappers/RAND/src/: functions.cpp
redscale_wrappers/build_tools/depinc/: README.md  cuda.h
redscale_wrappers/cmake/: FindChip.cmake  FindCrocblas.cmake  FindCrocfft.cmake  FindCrocmSMI.cmake  FindCrocrand.cmake  FindCrocsolver.cmake  FindCrocsparse.cmake
redscale_wrappers/common/: CMakeLists.txt
redscale_wrappers/common/include/cosplay_impl/: Deinit.hpp  Exception.hpp  HIPSynchronisedStream.hpp  SignalPool.hpp  Spinlock.hpp  cu_to_roc.hpp  cu_to_roc_cmplx.hpp  cuda_decl.hpp  enum_mapper.hpp  pop_enum_mapper.hpp
redscale_wrappers/common/src/: Deinit.cpp  Exception.cpp  HIPSynchronisedStream.cpp  InterceptHip.cpp  SignalPool.cpp  cuda.cpp
redscale_wrappers/solver/: CMakeLists.txt
redscale_wrappers/solver/include/: cusolverDn.h  cusolverRf.h  cusolver_common.h
redscale_wrappers/solver/include/solver_impl/: common.h  export_flags.h  life_cycle.h  macro_hell.h  macro_hell_rescind.h  mapped_types.hpp  types.h
redscale_wrappers/solver/src/: impl.cpp
redscale_wrappers/sparse/: CMakeLists.txt
redscale_wrappers/sparse/include/: cusparse.h  cusparseLt.h  cusparse_v2.h
redscale_wrappers/sparse/include/cusparse_impl/: common.h  extra.h  helpers.h  level_2.h  level_3.h  life_cycle.h  logging.h  macro_hell.h  macro_hell_rescind.h  mapped_types.hpp  matrix.h  op_matrix_matrix.h  op_matrix_vector.h  op_vector_vector.h  postamble.h  preamble.h  preconditioners.h  reordering_and_format_conversion.h  sorting.h  types.h  vector.h
redscale_wrappers/sparse/src/: impl.cpp
redscale_wrappers/test/: CMakeLists.txt  README.md  main.cpp
redscale_wrappers/test/blas/: CMakeLists.txt  level1.cpp  level3.cpp  library.cpp  main.cpp
redscale_wrappers/test/cosplaycommon/: CMakeLists.txt  HIPSynchronisedStream.cpp
redscale_wrappers/test/cpu/blas/: Streams.cpp
redscale_wrappers/test/rand/: CMakeLists.txt  common.hpp  device.cu  host.cpp
